# ghouse

./: .env  .env.mac  .gitignore  main.py  plottempslog.out  pyproject.toml  readme.md
crons/: push_data_and_plots.zsh
data/internal/: newtempdata.csv  tempdata.csv  tempdata_akhouse.csv
datacollection/: collect_fmi.py  collect_fmi_fmiopendata.py  collect_fmi_forecasts.py  croncollectfmi.out  croncollectfmi_forecast.out  read_DS18B20.py  read_DS18B20_prototype.py  sensor_names  sensor_offsets  tempdata.csv  tempdata_unstructured.csv  tmpread.out
datavisualisation/: a.out  forecast_and_current_state.py  initial.c  plot_outside_temperature.py  plottemp.c  plottemperatures.c  plottempslog.out  prototype.py  readfile.c  readme.md  readtempdata.c  readtempdata.h  simplegui.c  trial_house.psc
