[project]
name = "ghouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eccodes==2.41.0",
    "fmi-weather-client>=0.6.0",
    "fmiopendata>=0.4.3",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scienceplots>=2.1.1",
]
